# smallrt

./: .gitmodules  CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  camera.cpp  hitable_list.cpp  hitable_list.h  material.h  material_dielectric.h  material_metal.h  sphere.h  utils.cpp
rust/: Cargo.toml
rust/src/: hittable.rs  hittable_list.rs  main.rs  ray.rs  sphere.rs  utils.rs  vector.rs
src/: CMakeLists.txt  camera.cpp  camera.h  hitable.h  hitable_list.cpp  hitable_list.h  material_lambert.h  material_metal.h  ray.h  smallrt.cpp  sphere.cpp  sphere.h  utils.h  vector.cpp  vector.h
