[package]
name = "smallrt"
version = "0.1.0"
authors = ["Emmanuel Durand <emmanueldurand@protonmail.com>"]
edition = "2018"
license = "GPL"
repository = "https://github.com/paperManu/smallrt"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
